Bug 291093 - Removing Quote indicator have no effect
Summary: Removing Quote indicator have no effect
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: misc (other bugs)
Version First Reported In: 4.7
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-09 22:15 UTC by maxime.haselbauer
Modified: 2012-03-27 11:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description maxime.haselbauer 2012-01-09 22:15:18 UTC
Version:           unspecified (using KDE 4.7.4) 
OS:                Linux

I have 3 identitites
None of them use it owns template with own quote indicator
When I got to 
kmail 
Settings 
Configure Kmail 
Composer 
I remove the Quote indicator (yes th ugly ">" that is set by default although no one use it..)
Apply
Ok 
########THEN I DO #########
Settings 
Configure Kmail 
Composer 
Look in "Quote indicator" field , and surprise, guess who's back
#####BUT WE GOT SOME MORE##########
#####THEN I DO###################
Settings 
Configure Kmail 
Composer 
Insert a blank space in the "Quote indicator"
Apply
Ok
#######THEN I DO############
Reply to on a mail that I receive
and guess who is back again?
(No I am not retarded and Yes I checked that the "Use custom template" is unticked for all my three identities)

NB If I go to see the Quote indicator in the settings the blank space appear well.
But when replying to a message the > keep on going....


Reproducible: Always

Steps to Reproduce:
see above

Actual Results:  
Seems like the function changing the Quote indicator was neither beta tested nor implemented

Expected Results:  
the > should not appear anymore ( as well as the green colouring of the police)

I have had the problem on 
kmail 4.7.2
kmail 4.7.3
kmail 4.7.4
Comment 1 Christophe Marin 2012-01-12 12:09:41 UTC
(In reply to comment #0)
> Version:           unspecified (using KDE 4.7.4) 
> OS:                Linux
> 
> 
> Expected Results:  
> the > should not appear anymore ( as well as the green colouring of the police)
> 

The help for this field (shift-F1 when it has the mouse focus) indicates that it accepts 3 other values:

%f - The author's initials
%% - a percent sign
%_ - a space
Comment 2 Laurent Montel 2012-01-13 08:28:51 UTC
And theses 3 other values doesn't work...
will look at
Comment 3 Laurent Montel 2012-01-13 08:32:15 UTC
no it works but not in global directly... will look at
Comment 4 maxime.haselbauer 2012-03-08 00:45:35 UTC
Any news on that?
Maybe changing the status to confirmed?
Comment 5 Laurent Montel 2012-03-27 11:08:33 UTC
Git commit d5a66bb1f3ec62f10aafcc48fa119e3ec655ecff by Montel Laurent.
Committed on 27/03/2012 at 13:07.
Pushed by mlaurent into branch 'master'.

Fix Bug 291093 - Removing Quote indicator have no effect

FIXED-IN: 4.8.2

M  +1    -1    templateparser/templateparser.cpp

http://commits.kde.org/kdepim/d5a66bb1f3ec62f10aafcc48fa119e3ec655ecff
Comment 6 Laurent Montel 2012-03-27 11:09:27 UTC
Git commit 4fd9891d4efd3931c1040be6771d3396ad68fba4 by Montel Laurent.
Committed on 27/03/2012 at 13:07.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 291093 - Removing Quote indicator have no effect

FIXED-IN: 4.8.2
(cherry picked from commit d5a66bb1f3ec62f10aafcc48fa119e3ec655ecff)

M  +1    -1    templateparser/templateparser.cpp

http://commits.kde.org/kdepim/4fd9891d4efd3931c1040be6771d3396ad68fba4
Comment 7 Laurent Montel 2012-03-27 11:10:26 UTC
I fixed problem where we didn't take good quotestring.
but for space element use %_ as give in documentation