Fix Bug 291093 - Removing Quote indicator have no effect

FIXED-IN: 4.8.2
BUG: 291093
(cherry picked from commit d5a66bb1f3ec62f10aafcc48fa119e3ec655ecff)