templateparser/templateparser.cpp
@@ -1444,7 +1444,7 @@ QString TemplateParser::findTemplate()
     return QString();
   }
 
-  mQuoteString = DefaultTemplates::defaultQuoteString();
+  mQuoteString = GlobalSettings::self()->quoteString();
   return tmpl;
 }
 
